--- a/Label_Points_Inside_Polygons.Rmd
+++ b/Label_Points_Inside_Polygons.Rmd
@@ -335,8 +335,13 @@ suppressPackageStartupMessages( library( splancs ) )
 LabelPointsWithinPolygons <- function( Long
                                        , Lat
                                        , list.of.polygon.boundaries ) {
-  # 1. Ensure necessary packages are imported
+  # 1. Ensure necessary packages are imported and
+  #    ensure that the names( list.of.polygon.boundaries ) is not null
   require( splancs )
+  
+  if( is.null( names( list.of.polygon.boundaries ) ) ){
+    stop( "No names have been assigned to the matrices within the object list.of.polygon.boundaries. Please assign the matrices within that list a set of character names.")
+  }
   
   # 2. Create 'polygon.label' vector
   # and assign it a value of NA. This variable will be used to
@@ -380,7 +385,7 @@ LabelPointsWithinPolygons <- function( Long
     #          will not be assigned to any polygon.
     #    Note: I'm building in an edge case where one of the coordinate pairs
     #          are NA values.
-    if( any( is.na( df.lon.lat$x ) | is.na( df.lon.lat$y ) ) == TRUE ){
+    if( any( is.na( df.lon.lat$x ) | is.na( df.lon.lat$y ) ) ){
       
       # create filter condition
       filter.condition <- which( !is.na( df.lon.lat$x ) & !is.na( df.lon.lat$y ) )
@@ -391,7 +396,7 @@ LabelPointsWithinPolygons <- function( Long
         inpip( pts = df.lon.lat[ filter.condition, ]
                , poly = list.of.polygon.boundaries[[i]]
                , bound = FALSE
-               )
+        )
       
       # place NA values in $in.polygon
       df.lon.lat$in.polygon <- NA
@@ -406,12 +411,14 @@ LabelPointsWithinPolygons <- function( Long
         inpip( pts = df.lon.lat
                , poly = list.of.polygon.boundaries[[i]]
                , bound = FALSE
-               )
+        )
     } # end of else statement
     
     # 8. Logical test: Does at least one coordinate pairs reside within
     #    this particular polygon (i.e. list.of.polygon.boundaries[[i]])?
-    if( any( df.lon.lat$in.polygon ) == TRUE ) {
+    #    AND
+    #    is
+    if( any( df.lon.lat$in.polygon , na.rm = TRUE ) ) {
       # filter df.lon.lat to only include these pairs which
       # contain a TRUE value in their $in.polygon column.
       df.lon.lat <- 
@@ -428,7 +435,7 @@ LabelPointsWithinPolygons <- function( Long
       polygon.label[ 
         which( Long %in% df.lon.lat$x &
                  Lat %in% df.lon.lat$y
-               )
+        )
         ] <- names( list.of.polygon.boundaries )[i]
       
       # 10. Move onto the next list.of.polygon.boundaries[[i]] element
